[package]
name = "yew-counter-crate"
categories = ["wasm"]
version = "0.1.0"
authors = ["qwerty2501 <qwerty2501@live.jp>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = { version = "0.14", features = ["web_sys"] }
wasm-bindgen = "^0.2"
wee_alloc = { version = "0.4.5", optional = true }
console_error_panic_hook = { version = "0.1.5", optional = true }
cfg-if = "0.1.10"
test-case = "1.0.0"

[build]
target="wasm32-unknown-unknown"

[features]
default = ["console_error_panic_hook","wee_alloc"]

[profile.release]
opt-level = "z"
lto = true
